--- a/lib/说明.md
+++ b/lib/说明.md
@@ -1,21 +1,38 @@
 这个jar包用来绘图，使用方法如下
 
-import com.wyj.Graphiz.GraphViz;;
+import com.wyj.Graphiz.GraphViz;
+
 public class test{ 
+
 	public static void main(String[] args) { 
+	
 		GraphViz gViz=new GraphViz("D:\\project\\JAVA\\javaBasicKnowledge\\src\\test",
+		
 				"G:\\Graphviz\\bin\\dot.exe"); 
-		gViz.start_graph(); 
+		gViz.start_graph();
+		
 		gViz.addln("A->B;"); 
+		
 		gViz.addln("A->C;"); 
+		
 		gViz.addln("C->B;"); 
+		
 		gViz.addln("B->D;"); 
+		
 		gViz.addln("C->E;"); 
+		
 		gViz.end_graph(); 
+		
 		try { 
+		
 			gViz.run(); 
+			
 			} catch (Exception e) { 
+			
 				e.printStackTrace(); 
+				
 			} 
+			
 		}
+		
 }
